--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -51,6 +51,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+         <dependency>
+                 <groupId>io.confluent</groupId>
+                 <artifactId>kafka-avro-serializer</artifactId>
+                 <version>5.3.2</version>
+             </dependency>
+             <dependency>
+                 <groupId>io.confluent</groupId>
+                 <artifactId>kafka-schema-registry-client</artifactId>
+                 <version>5.3.2</version>
+             </dependency>
+             
         <!-- Test dependencies -->
         <dependency>
             <groupId>com.google.truth</groupId>
