--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -28,7 +28,14 @@
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
-    </repositories>
+         <repository>
+                 <id>apache.snapshots</id>
+                 <url>https://repository.apache.org/snapshots</url>
+             </repository>
+             <repository>
+                 <id>confluent</id>
+                 <url>https://packages.confluent.io/maven/</url>
+             </repositories>
 
     <dependencies>
         <dependency>
