--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -35,6 +35,7 @@
              <repository>
                  <id>confluent</id>
                  <url>https://packages.confluent.io/maven/</url>
+                  </repository>
              </repositories>
 
     <dependencies>
