--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -16,34 +16,31 @@
     </description>
 
     <properties>
-        <!-- Defina a versão do JaCoCo e do Surefire Plugin -->
+        <postgresql.version>42.5.4</postgresql.version>
+        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+        <ojdbc8.version>21.9.0.0</ojdbc8.version>
+        <truth.version>1.1.3</truth.version>
         <jacoco.version>0.8.10</jacoco.version>
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
-        <!-- Defina a versão do Beam -->
         <beam.version>2.53.0</beam.version>
     </properties>
 
     <repositories>
         <repository>
+            <id>apache.snapshots</id>
+            <url>https://repository.apache.org/snapshots</url>
+        </repository>
+        <repository>
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
-         <repository>
-                 <id>apache.snapshots</id>
-                 <url>https://repository.apache.org/snapshots</url>
-             </repository>
-             <repository>
-                 <id>confluent</id>
-                 <url>https://packages.confluent.io/maven/</url>
-                  </repository>
-             </repositories>
+    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>com.google.cloud.teleport.v2</groupId>
             <artifactId>datastream-common</artifactId>
             <version>${project.version}</version>
-            <!-- Exclua outras implementações do SLF4J -->
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -56,18 +53,18 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
-         <dependency>
-         <groupId>org.apache.beam</groupId>
-             <artifactId>beam-it-jdbc</artifactId>
-             <version>2.XX.0</version> <!-- Substitua pela versão correta -->
-             <scope>test</scope>
-         </dependency>
-         <dependency>
-             <groupId>org.apache.beam</groupId>
-             <artifactId>beam-it-gcp</artifactId>
-             <version>2.XX.0</version> <!-- Substitua pela versão correta -->
-             <scope>test</scope>
-         </dependency>
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-it-jdbc</artifactId>
+            <version>${beam.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-it-gcp</artifactId>
+            <version>${beam.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -79,18 +76,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- Dependências do Confluent -->
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
-            <version>7.4.0</version> <!-- Use a versão mais recente -->
+            <version>7.4.0</version>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-schema-registry-client</artifactId>
-            <version>7.4.0</version> <!-- Use a versão mais recente -->
+            <version>7.4.0</version>
         </dependency>
-        <!-- Test dependencies -->
         <dependency>
             <groupId>com.google.truth</groupId>
             <artifactId>truth</artifactId>
@@ -124,14 +119,13 @@
         <dependency>
             <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
-            <version>3.5.2</version> <!-- Use a versão mais recente -->
+            <version>3.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
             <version>${beam.version}</version>
         </dependency>
-        <!-- Adicione apenas uma implementação do SLF4J -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -141,7 +135,6 @@
 
     <build>
         <plugins>
-            <!-- Plugin para gerar o JAR com o manifesto correto -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -196,7 +189,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Plugin do JaCoCo -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -210,7 +202,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Plugin do Surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
