--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -34,6 +34,10 @@
             <id>confluent</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
     </repositories>
 
     <dependencies>
