--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <postgresql.version>42.6.1</postgresql.version>
-        <mysql-connector-java.version>8.0.30</mysql-connector-java.version>
+        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <ojdbc8.version>23.2.0.0</ojdbc8.version>
         <truth.version>1.1.5</truth.version>
         <jacoco.version>0.8.8</jacoco.version>
@@ -56,6 +56,20 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <version>${truth.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.beam</groupId>
+            <artifactId>beam-sdks-java-testing</artifactId>
+            <version>${beam.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.google.cloud.teleport.v2</groupId>
             <artifactId>datastream-common</artifactId>
