--- a/datastream-to-sql/pom.xml
+++ b/datastream-to-sql/pom.xml
@@ -21,8 +21,8 @@
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <ojdbc8.version>23.2.0.0</ojdbc8.version>
         <truth.version>1.1.5</truth.version>
-        <jacoco.version>0.8.8</jacoco.version>
-        <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
+        <jacoco.version>0.8.10</jacoco.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
         <beam.version>2.62.0</beam.version>
@@ -65,8 +65,27 @@
 
         <dependency>
             <groupId>org.apache.beam</groupId>
-            <artifactId>beam-sdks-java-testing</artifactId>
+            <artifactId>beam-runners-direct-java</artifactId>
             <version>${beam.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
 
